adição do script para salvar dados no local storage

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <label for="investimentoDia">Investimento por dia:</label><br/>
         <input type="number" step="any" name="investimentoDia" id="investimentoDia" placeholder="R$ 0"><br/>
 
-        <input type="submit" value="SALVAR" id="button">
+        <input type="submit" value="SALVAR" id="button" onclick="cadastroAnuncio()">
     </form>
 
     <script src="script.js"></script>
