adição de área para relatório

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <input type="submit" value="BUSCAR" id="btn-pesquisar" onclick="pesquisarDados()">
         </div>
 
+        <div id="relatorio">
+            <p class="title-rlt">Relatório</p>
+            <textarea name="relatorio" id="relatorio-anuncio"></textarea>
+        </div>
     </div>
 
     <script src="script.js"></script>
