adição função de adicionar dados

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div id="relatorio">
             <p class="title-rlt">Relatório</p>
-            <textarea name="relatorio" id="relatorio-anuncio"></textarea>
+            <textarea name="relatorio" id="relatorioAnuncio" readonly></textarea>
         </div>
     </div>
 
